<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lab1_pkg</name>
  <version>0.1.0</version>
  <description>A ROS 2 package for lab1 functionality related to Ackermann vehicle control and simulation.</description>
  <maintainer email="zac.serocki@gmail.com">Zac Serocki</maintainer>
  <license>Apache-2.0</license>

  <!-- Build Tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>
  <!-- Build-Time Dependencies -->
  <build_depend>rclcpp</build_depend>
  <build_depend>rclpy</build_depend>

  <!-- Runtime Dependencies -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>python3</exec_depend>
  <exec_depend>ackermann_msgs</exec_depend>

  <!-- Testing Dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <build_type>ament_python</build_type>
  </export>
</package>